--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -1,5 +1,8 @@
-name: OWASP ZAP Cron Job
+name: OWASP ZAP Cron Job e Push
 on:
+  push:
+    branches:
+      - main
   schedule:
     - cron: '16 16 * * *'
 jobs:
