--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: '16 16 * * *'
+    - cron: '* 6 * * *'
 jobs:
   dast:
     runs-on: ubuntu-latest
