--- a/.github/workflows/dast.yml
+++ b/.github/workflows/dast.yml
@@ -1,21 +1,21 @@
-name: OWASP ZAP Cron Job e Push
-on:
-  # push:
-  #   branches:
-  #     - main
-  # schedule:
-  #   - cron: '* 6 * * *'
-jobs:
-  dast:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout código
-        uses: actions/checkout@v2
-      - name: Executar OWASP ZAP
-        uses: zaproxy/action-baseline@v0.7.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'http://juice-shop.herokuapp.com/'
-          rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-a'
+# name: OWASP ZAP Cron Job e Push
+# on:
+#   # push:
+#   #   branches:
+#   #     - main
+#   # schedule:
+#   #   - cron: '* 6 * * *'
+# jobs:
+#   dast:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout código
+#         uses: actions/checkout@v2
+#       - name: Executar OWASP ZAP
+#         uses: zaproxy/action-baseline@v0.7.0
+#         with:
+#           token: ${{ secrets.GITHUB_TOKEN }}
+#           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+#           target: 'http://juice-shop.herokuapp.com/'
+#           rules_file_name: '.zap/rules.tsv'
+#           cmd_options: '-a'
